@@ -1,4 +1,5 @@
 # Hachimi Crk  
+# 启动前记得加Java虚拟机参数 -Xverify:none ！
 cloudlite/bounce跑路一年了 我也销声匿迹一年了，我对不起你们，所以我公布了Hachimi crk  
 Hachimi分为普通版和beta版 售卖价格分别是140r和1000r  
 hachimi-1.4.5-crk.jar为普通版 hachimi-b4-crk.jar为1000r的beta版本  
